# gdx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md
crates/gdx-cli/: Cargo.toml
crates/gdx-cli/resources/addons/gdx_daemon/: daemon_server.gd
crates/gdx-cli/resources/addons/gdx_runtime/: capture_runner.gd
crates/gdx-cli/resources/addons/gdx_tools/: automation.gd  create_scene.gd
crates/gdx-cli/src/: cli.rs  constants.rs  context.rs  daemon.rs  diagnostics.rs  error.rs  godot.rs  main.rs  output.rs  project.rs
crates/gdx-cli/src/commands/: addons.rs  asset.rs  code.rs  env.rs  export.rs  init.rs  mod.rs  play.rs  project_cmd.rs  resource.rs  scene.rs  session.rs  test_cmd.rs  verify.rs
crates/gdx-schema/: Cargo.toml
crates/gdx-schema/src/: lib.rs
docs/: AI_USAGE.md
docs/en/: agent-usage.md  cli-reference.md  developing.md  quickstart.md  troubleshooting.md
docs/zh-CN/: agent-usage.md  cli-reference.md  developing.md  quickstart.md  troubleshooting.md
examples/: hello_3d_scene.json  hello_scene.json
skills/gdx-game-dev/: SKILL.md
skills/gdx-game-dev/agents/: openai.yaml
skills/gdx-game-dev/references/: gdx-cli.md  scene-spec.md  troubleshooting.md  workflows.md
skills/gdx-game-dev/scripts/: new-game-smoke.ps1  resolve-gdx.ps1  smoke-test.ps1
templates/basic/: project.godot
tests/e2e/: daemon_3d_edit.ps1  daemon_scene_edit.ps1  hello_3d.ps1  hello_world.ps1  record_movie.ps1  touch_input.ps1  touch_runtime_outdated.ps1  ui_click.ps1
(+8 files in other folders)
